# FloppyFloat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/: floppy_float.cpp  floppy_float.h  soft_float.cpp  soft_float.h  utils.h  vfpu.cpp  vfpu.h
tests/: CMakeLists.txt  float_rng.h  test_core.cpp  test_full_proof.cpp  test_perf.cpp  test_performance.cpp  test_softfloat.cpp  test_softfloat_arm64_default_nan.cpp  test_softfloat_floppyfloat.cpp  test_softfloat_riscv.cpp  test_softfloat_softfloat.cpp  test_softfloat_x86.cpp  test_utils.cpp  test_x86.cpp
